--- a/index.html
+++ b/index.html
@@ -650,5 +650,64 @@
       </div>      
 <!-- top destinations for your next holiday  end -->
 
+<!-- footer -->
+<div class="footer">
+  <div class="all_footer">
+    <div class="footer_content">
+      <div class="sub-footer">
+        <div class="sub-footer__content">
+          <p class="sub-footer_heading">About Tripadvisor</p>
+          <a href="">About Us</a>
+          <a href="">Press</a>
+          <a href="">Resources and Policies</a>
+          <a href="">Careers</a>
+          <a href="">Trust & Safety</a>
+          <a href="">Contact us</a>
+          <a href="">Accessibility Statement</a>
+        </div>
+        <div class="sub-footer__content">
+          <p class="sub-footer_heading">Explore</p>
+          <a href="">Write a review</a>
+          <a href="">Add a Place</a>
+          <a href="">Join</a>
+          <a href="">Travellers' Choice</a>
+          <a href="">GreenLeaders</a>
+          <a href="">Help Centre</a>
+          <a href="">Travel Articles</a>
+        </div>
+        <div class="sub-footer__content">
+          <p class="sub-footer_heading">Do Business with</p>
+          <a href="">Owners & DMO/CVB</a>
+          <a href="">Business Advantage</a>
+          <a href="">Sponsored Placements</a>
+          <a href="">Access our Content API</a>
+          <a href="">Get The App</a>
+          <a href="">iPhone App</a>
+          <a href="">Android App</a>
+        </div>  
+    </div>
+    <div class="sub-footer__two">
+      <div class="sub-footer__content">
+        <p class="sub-footer_heading">Tripadvisor sites</p>
+        <a href="">Book tours and attraction tickets on Viator</a>
+      </div>
+    </div>
+      </div>
+      <div class="last">
+        <img src="./images/tripadvisorlogo.png" />
+        <p>© 2024 Tripadvisor LLC All rights reserved.</p>
+        <a href="">Owners & DMO/CVB</a>
+        <a href="">Business Advantage</a>
+        <a href="">Sponsored Placements</a>
+        <a href="">Access our Content API</a>
+        <a href="">Get The App</a>
+        <a href="">iPhone App</a>
+        <a href="">Android App</a>
+      </div>
+      <p>This is the version of our website addressed to speakers of English in India. If you are a resident of another country or region, please select the appropriate version of Tripadvisor for your country or region in the drop-down menu. more</p>
+  </div>
+ 
+</div>
+
   </body>
 </html>
